# ai-image-video-detector

./: .dockerignore  .env.example  .gitignore  .mailmap  .pre-commit-config.yaml  .secrets.baseline  AGENTS.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  Dockerfile.gpu  LICENSE  Makefile  README.md  SECURITY.md  _support.py  autocollect.sh  collect.sh  continuous.sh  docker-compose.yml  install.sh  local.sh  pyproject.toml  requirements.lock.json  retrain.sh  run.sh  train.sh
.github/: dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/actions/setup-aid-python/: action.yml
.github/workflows/: codeql.yml  deps-update.yml  e2e-smoke.yml  security.yml  smoke.yml  tests.yml
deploy/: .env.example  Dockerfile  ai-detector.service  docker-compose.gpu.yml
docs/: CI_LOCAL.md  COMMANDS.md  REFERENCE.md  STARTUP.md
scripts/: audit_diversity.py  benchmark_gate.py  build_best_dataset.py  build_best_dataset_policy.py  build_best_dataset_sources.py  build_best_dataset_support.py  build_large_dataset.py  build_target_dataset.py  build_video_dataset.py  continuous_collect.sh  continuous_training.sh  dataset_builder_common.py  deps_profile.py  do.sh  docker-entrypoint.sh  doctor.sh  eval_test_ensemble.py  export_best_release.py  extract_recent_training_spec.py  fit_domain_thresholds.py  fit_ensemble.py  fit_multimodal_fusion.py  full_pipeline_4090.sh  hf_data.py  hparam_sweep.sh  image_materialize.py  incremental_refresh.sh  ingest_model_outputs.py  install_deps.sh  linux_service.sh  linux_worker.sh  local_retrain_4090.sh  malware_scan.sh  max_accuracy_v2.sh  max_quality_4090.sh  metadata_finetune_4090.sh  mine_hard_negatives.py  one_command_4090.sh  one_command_start.sh  precheck.sh  (+18 more)
scripts/lib/: apt_packages_validate.sh  collection.sh  core.sh  env.sh  hf_default_queries.inc.sh  install_validate.py  pipeline_max_quality_env.inc.sh  setup_common.sh  training.sh
src/ai_image_detector/: __init__.py  api.py  checkpoint_io.py  checkpoints.py  cli.py  collection_paths.py  data.py  dataset_integrity.py  dataset_layout.py  dataset_tools.py  decision.py  domain.py  ensemble.py  explain.py  infer.py  inference_report.py  io_limits.py  metadata.py  metrics.py  model.py  multimodal.py  perceptual_hash.py  provenance.py  release_tools.py  risk_tools.py  robust_eval.py  runtime.py  text_signals.py  train.py  train_main.py  train_post.py  train_run_artifacts.py  train_support.py  video.py  video_temporal.py
src/ai_image_detector.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
src/ai_image_detector/utils/: __init__.py  jsonio.py
src/ai_image_detector/web/: app.js  index.html  style.css
tests/: __init__.py  _support.py  test_audit_diversity.py  test_benchmark_gate.py  test_build_best_dataset.py  test_build_best_dataset_sources.py  test_build_target_dataset.py  test_build_video_dataset.py  test_checkpoint_io.py  test_checkpoints.py  test_ci_workflows.py  test_cli.py  test_collection_paths.py  test_dataset_integrity.py  test_dataset_layout.py  test_dataset_tools.py  test_dependency_metadata_surface.py  test_do_sh.py  test_docs_surface.py  test_doctor_sh.py  test_e2e_smoke.py  test_ensemble.py  test_export_best_release.py  test_extract_recent_training_spec.py  test_hf_data.py  test_hf_data_safety.py  test_infer_logic.py  test_inference_report.py  test_install_deps_surface.py  test_install_sh.py  test_install_validate.py  test_io_limits.py  test_local_sh.py  test_max_accuracy_v2.py  test_metadata_eval_surface.py  test_metadata_finetune.py  test_metrics_thresholds.py  test_pipeline_reporting.py  test_pipeline_wrappers.py  test_prepare_training_data.py  (+10 more)
