[project]
name = "ai-image-detector"
version = "0.1.0"
description = "Linux pipeline for local AI image and video collection and PyTorch training"
readme = "README.md"
license = {file = "LICENSE"}
requires-python = ">=3.10"
authors = [
  {name = "Legendarylibrorg"},
]
keywords = ["ai", "image-detection", "video-detection", "hugging-face", "pytorch", "training-pipeline"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "Intended Audience :: Science/Research",
  "License :: OSI Approved :: MIT License",
  "Operating System :: POSIX :: Linux",
  "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
  "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = []

[project.urls]
Homepage = "https://github.com/Legendarylibrorg/ai-image-video-detector"
Repository = "https://github.com/Legendarylibrorg/ai-image-video-detector"
Issues = "https://github.com/Legendarylibrorg/ai-image-video-detector/issues"
Documentation = "https://github.com/Legendarylibrorg/ai-image-video-detector/blob/main/README.md"

[project.optional-dependencies]
inference = [
  "torch>=2.2",
  "torchvision>=0.17",
  "numpy>=1.25",
  "pillow>=10.0",
  "safetensors>=0.4",
]
training = [
  "torch>=2.2",
  "torchvision>=0.17",
  "numpy>=1.25",
  "pillow>=10.0",
  "safetensors>=0.4",
  "scikit-learn>=1.3",
  "piexif>=1.1.3",
]
collection = [
  "datasets>=2.19",
  "huggingface_hub>=0.24",
  "pillow>=10.0",
]
video = [
  "opencv-python-headless>=4.10",
]
pipeline = [
  "torch>=2.2",
  "torchvision>=0.17",
  "numpy>=1.25",
  "scikit-learn>=1.3",
  "pillow>=10.0",
  "piexif>=1.1.3",
  "opencv-python-headless>=4.10",
  "datasets>=2.19",
  "huggingface_hub>=0.24",
  "safetensors>=0.4",
]

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "src"}
license-files = ["LICENSE"]

[tool.setuptools.packages.find]
where = ["src"]
