[project]
name = "ai-image-detector"
version = "0.1.0"
description = "Linux pipeline for local AI image and video collection and PyTorch training"
readme = "README.md"
license = {file = "LICENSE"}
requires-python = ">=3.11"
authors = [
  {name = "Legendarylibrorg"},
]
keywords = ["ai", "image-detection", "video-detection", "hugging-face", "pytorch", "training-pipeline"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "Intended Audience :: Science/Research",
  "License :: OSI Approved :: MIT License",
  "Operating System :: POSIX :: Linux",
  "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = []

[project.urls]
Homepage = "https://github.com/Legendarylibrorg/ai-image-video-detector"
Repository = "https://github.com/Legendarylibrorg/ai-image-video-detector"
Issues = "https://github.com/Legendarylibrorg/ai-image-video-detector/issues"
Documentation = "https://github.com/Legendarylibrorg/ai-image-video-detector/blob/main/README.md"

[project.optional-dependencies]
inference = [
  "torch>=2.11",
  "torchvision>=0.26",
  "numpy>=2.4",
  "pillow>=12.2",
  "safetensors>=0.7",
]
training = [
  "torch>=2.11",
  "torchvision>=0.26",
  "numpy>=2.4",
  "pillow>=12.2",
  "safetensors>=0.7",
  "scikit-learn>=1.8",
  "piexif>=1.1.3",
]
collection = [
  "datasets>=4.8",
  "huggingface_hub>=1.10",
  "pillow>=12.2",
]
video = [
  "opencv-python-headless>=4.13",
]
pipeline = [
  "torch>=2.11",
  "torchvision>=0.26",
  "numpy>=2.4",
  "scikit-learn>=1.8",
  "pillow>=12.2",
  "piexif>=1.1.3",
  "opencv-python-headless>=4.13",
  "datasets>=4.8",
  "huggingface_hub>=1.10",
  "safetensors>=0.7",
]

[build-system]
requires = ["setuptools>=82.0.1", "wheel>=0.46.3"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "src"}
license-files = ["LICENSE"]

[tool.setuptools.packages.find]
where = ["src"]
