[project]
name = "ai-image-video-detector"
version = "0.1.0"
description = "Local AI image & video research pipeline — data, training, reports (not serving)."
readme = "README.md"
license = {file = "LICENSE"}
requires-python = ">=3.11"
authors = [
  {name = "Legendarylibrorg"},
]
keywords = ["ai", "image-detection", "video-detection", "hugging-face", "pytorch", "training-pipeline", "research-pipeline", "ml-research"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "Intended Audience :: Science/Research",
  "License :: OSI Approved :: MIT License",
  "Operating System :: POSIX :: Linux",
  "Operating System :: POSIX",
  "Operating System :: MacOS :: MacOS X",
  "Operating System :: Microsoft :: Windows",
  "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = []

[project.urls]
Homepage = "https://github.com/Legendarylibrorg/ai-image-video-detector"
Repository = "https://github.com/Legendarylibrorg/ai-image-video-detector"
Issues = "https://github.com/Legendarylibrorg/ai-image-video-detector/issues"
Documentation = "https://github.com/Legendarylibrorg/ai-image-video-detector/blob/main/docs/REFERENCE.md"

[project.optional-dependencies]
inference = [
  "torch>=2.12",
  "torchvision>=0.27",
  "numpy>=2.4.6",
  "pillow>=12.2",
  "safetensors>=0.7",
]
training = [
  "torch>=2.12",
  "torchvision>=0.27",
  "numpy>=2.4.6",
  "pillow>=12.2",
  "safetensors>=0.7",
  "scikit-learn>=1.8",
  "piexif>=1.1.3",
]
collection = [
  "datasets>=4.8.5",
  "huggingface_hub>=1.16.1",
  "pillow>=12.2",
]
video = [
  "opencv-python-headless>=4.13.0.92",
]
pipeline = [
  "torch>=2.12",
  "torchvision>=0.27",
  "numpy>=2.4.6",
  "scikit-learn>=1.8",
  "pillow>=12.2",
  "piexif>=1.1.3",
  "opencv-python-headless>=4.13.0.92",
  "datasets>=4.8.5",
  "huggingface_hub>=1.16.1",
  "safetensors>=0.7",
]

[build-system]
requires = ["setuptools>=82.0.1", "wheel>=0.47.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "src"}
license-files = ["LICENSE"]

[tool.setuptools.packages.find]
where = ["src"]

# Ruff: CI runs `ruff check src/ai_image_detector tests` after `pip install ruff` (not in requirements.lock).
# E402 ignored: `from __future__ import annotations` then module docstring then imports is intentional here.
[tool.ruff]
target-version = "py311"
line-length = 120
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E4", "E7", "E9", "F"]
ignore = ["E402"]
